--- a/styles/style.css
+++ b/styles/style.css
@@ -81,6 +81,9 @@ body
 .markdownContRoot
 {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .markdownOuterCont
@@ -120,6 +123,13 @@ body
     display: flex;
     flex-direction: column;
     text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+    #navShortcut
+    {
+        display: none;
+    }
 }
 
 .navKeys
@@ -169,6 +179,7 @@ body
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: .3s;
 }
 
 .subHeader
@@ -176,6 +187,18 @@ body
     font-size: 10px;
     margin: 0;
     margin-top: 1.5em;
+    margin-left: .5em;
+}
+
+.subHeader a
+{
+    color: inherit;
+    text-decoration: none;
+}
+
+.subHeader a:hover
+{
+    text-decoration: underline;
 }
 
 .footer
@@ -216,7 +239,7 @@ body
     background: #2A5875;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    padding: 30px 35px;
+    padding: 30px 20px;
     width: fit-content;
     transition: .3s;
 }
@@ -247,7 +270,7 @@ body
 
 .menuIconDivHidden
 {
-    width: 0%;
+    padding: 30px 35px;
     transition: .3s;
 }
 
